--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.1.0
   flutter_stripe: ^9.2.2
   flutter_bloc: ^8.1.3
+  # stripe_payment: ^1.0.8
   bloc: ^8.1.2
 
 dev_dependencies:
