--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # stripe_payment: ^1.0.8
   bloc: ^8.1.2
   conditional_builder_null_safety: ^0.0.6
+  pay: ^1.1.1
 
 dev_dependencies:
   flutter_test:
